CHANGELOG

[Master]
- dictionary function
- build chord
- add dictionaries